Remove Open Sans and add Source Sans Pro

--- a/style.css
+++ b/style.css
@@ -7,4 +7,10 @@
  Template:       spine
  Version:        0.0.1
 */
+
+
+main {
+	color: #191919;
+	font: 300 18px/28px "Source Sans Pro", sans-serif;
+}
 /*# sourceMappingURL=style.css.map */
