--- a/style.css
+++ b/style.css
@@ -228,6 +228,20 @@ figcaption {
 	color: #da1e00;
 }
 
+.primary-categories a:hover {
+	border-bottom: 1px solid #da1e00;
+}
+
+.primary-categories a:after {
+	background: url(images/icons/link.svg) center/90% no-repeat;
+	content: "";
+	display: inline-block;
+	height: 19px;
+	margin-left: 4px;
+	vertical-align: bottom;
+	width: 1em;
+}
+
 .article-header hgroup.source {
 	color: #191919;
 	font-size: 14px;
