--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -48,7 +48,7 @@ figure img,
 	text-align: left;
 }
 
-.social-share-bar span {
+.social-share-bar div > span {
 	display: block;
 	margin: 5px 3px;
 }
@@ -56,7 +56,11 @@ figure img,
 .social-share-bar ul {
 	background: #f2f2f2;
 	display: inline-block;
-	padding: 1rem;
+	padding: 12px 20px;
+}
+
+.social-share-bar li {
+	margin-left: 16px;
 }
 
 .social-share-bar li:first-of-type {
@@ -114,6 +118,10 @@ figure.alignnone {
 
 .article-footer dl dt:after {
 	content: none;
+}
+
+.social-media-icons {
+	display: none;
 }
 
 @media screen and (min-width: 990px) and (max-width: 1386px) {
