--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -26,6 +26,29 @@ figure img,
 	display: block;
 }
 
+article header time:before {
+	content: "";
+	display: inline-block;
+	height: 28px;
+	margin-right: 6px;
+	vertical-align: bottom;
+	width: 1em;
+}
+
+article header time:after {
+	content: none;
+}
+
+article header cite:before {
+	background: url(images/icons/people.svg) center/85% no-repeat;
+	content: "";
+	display: inline-block;
+	height: 28px;
+	margin-right: 6px;
+	vertical-align: bottom;
+	width: 1em;
+}
+
 .social-share-bar,
 .social-share-bar ul,
 .social-share-bar li,
