--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -2,8 +2,19 @@ html {
 	background-color: #f2f2f2;
 }
 
+main *,
+main *:before,
+main *:after {
+	box-sizing: border-box;
+}
+
+main {
+	padding-bottom: 5rem;
+}
+
 main section {
 	background: #fff;
+	padding-bottom: 2rem;
 }
 
 .single-post #binder .single .column.one {
@@ -146,6 +157,86 @@ figure.alignnone {
 .social-media-icons {
 	display: none;
 }
+
+/* --- Content syndicate cards --- */
+
+/* CSS Grid fallback */
+.content-syndicate-wrapper > * {
+	display: inline-block;
+}
+
+/* CSS Grid */
+.content-syndicate-wrapper {
+	display: grid;
+	grid-gap: 2rem;
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+}
+
+/* - allow aligning elements within an item - */
+.content-syndicate-item {
+	display: flex;
+	flex-direction: column;
+	align-content: flex-start;
+	transition: background-color .3s ease;
+}
+
+.content-item-image {
+	margin-bottom: 1rem;
+}
+
+.content-item-byline-date {
+	margin-bottom: .5rem;
+}
+
+.content-item-byline-date,
+.content-item-excerpt {
+	display: block;
+	font-size: .9rem;
+	line-height: 1.5;
+}
+
+.content-item-excerpt {
+	font-weight: 400;
+}
+
+.content-item-categories {
+	margin-bottom: 1rem;
+}
+
+.hentry .content-item-categories a {
+	color: #da1e00;
+	font-size: .9rem;
+	text-transform: uppercase;
+}
+
+.content-item-title {
+	margin-bottom: .5rem;
+}
+
+.hentry .content-item-title a,
+.hentry .content-item-categories a {
+	border: none;
+}
+
+.hentry .content-item-title a:after {
+	background: url(images/icons/link.svg) .1em/70% no-repeat;
+	content: "";
+	display: inline-block;
+	height: 1em;
+	margin: 0 0 -.05em .1em;
+	vertical-align: bottom;
+	width: 1em;
+}
+
+/* --- home page --- */
+.home .main-header {
+	display: none;
+}
+
+.home .top-head {
+	padding-top: 5rem;
+}
+
 
 @media screen and (min-width: 990px) and (max-width: 1386px) {
 
