--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -14,7 +14,9 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+.content-item-title,
+.content-item-title a {
 	font-weight: 900;
 }
 
@@ -31,7 +33,8 @@ h2 {
 	font-size: 40px;
 }
 
-h3 {
+h3,
+.content-item-title {
 	font-size: 25px;
 }
 
@@ -42,6 +45,11 @@ h4 {
 h5,
 h6 {
 	font-size: 18px;
+}
+
+.sub-call {
+	font-size: inherit;
+	margin-top: .5rem;
 }
 
 figcaption {
@@ -126,4 +134,26 @@ svg path {
 
 .article-footer a {
 	border-bottom: none;
+}
+
+/* --- home page styles --- */
+.home .home-head {
+	font-size: 7rem;
+	line-height: .85;
+	padding-bottom: 5rem;
+	text-transform: uppercase;
+}
+
+.top-head .two {
+	font-size: .9em;
+}
+
+.top-head p {
+	line-height: 1.5;
+}
+
+.head-beta {
+	color: #767676;
+	display: block;
+	font-size: .5em;
 }
