--- a/style.css
+++ b/style.css
@@ -12,8 +12,19 @@ html {
 	background-color: #f2f2f2;
 }
 
+main *,
+main *:before,
+main *:after {
+	box-sizing: border-box;
+}
+
+main {
+	padding-bottom: 5rem;
+}
+
 main section {
 	background: #fff;
+	padding-bottom: 2rem;
 }
 
 .single-post #binder .single .column.one {
@@ -157,6 +168,92 @@ figure.alignnone {
 	display: none;
 }
 
+/* --- Content syndicate cards --- */
+
+/* CSS Grid fallback */
+.content-syndicate-wrapper > * {
+	display: inline-block;
+}
+
+/* CSS Grid */
+.content-syndicate-wrapper {
+	display: grid;
+	grid-gap: 2rem;
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+}
+
+/* - allow aligning elements within an item - */
+.content-syndicate-item {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-ms-flex-line-pack: start;
+	    align-content: flex-start;
+	transition: background-color .3s ease;
+}
+
+.content-item-image {
+	margin-bottom: 1rem;
+}
+
+.content-item-byline-date {
+	margin-bottom: .5rem;
+}
+
+.content-item-byline-date,
+.content-item-excerpt {
+	display: block;
+	font-size: .9rem;
+	line-height: 1.5;
+}
+
+.content-item-excerpt {
+	font-weight: 400;
+}
+
+.content-item-categories {
+	margin-bottom: 1rem;
+}
+
+.hentry .content-item-categories a {
+	color: #da1e00;
+	font-size: .9rem;
+	text-transform: uppercase;
+}
+
+.content-item-title {
+	margin-bottom: .5rem;
+}
+
+.hentry .content-item-title a,
+.hentry .content-item-categories a {
+	border: none;
+}
+
+.hentry .content-item-title a:after {
+	background: url(images/icons/link.svg) .1em/70% no-repeat;
+	content: "";
+	display: inline-block;
+	height: 1em;
+	margin: 0 0 -.05em .1em;
+	vertical-align: bottom;
+	width: 1em;
+}
+
+/* --- home page --- */
+.home .main-header {
+	display: none;
+}
+
+.home .top-head {
+	padding-top: 5rem;
+}
+
+
 @media screen and (min-width: 990px) and (max-width: 1386px) {
 
 	.single-post .row .column.one .featured-image {
@@ -207,7 +304,9 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+.content-item-title,
+.content-item-title a {
 	font-weight: 900;
 }
 
@@ -224,7 +323,8 @@ h2 {
 	font-size: 40px;
 }
 
-h3 {
+h3,
+.content-item-title {
 	font-size: 25px;
 }
 
@@ -235,6 +335,11 @@ h4 {
 h5,
 h6 {
 	font-size: 18px;
+}
+
+.sub-call {
+	font-size: inherit;
+	margin-top: .5rem;
 }
 
 figcaption {
@@ -319,5 +424,27 @@ svg path {
 
 .article-footer a {
 	border-bottom: none;
+}
+
+/* --- home page styles --- */
+.home .home-head {
+	font-size: 7rem;
+	line-height: .85;
+	padding-bottom: 5rem;
+	text-transform: uppercase;
+}
+
+.top-head .two {
+	font-size: .9em;
+}
+
+.top-head p {
+	line-height: 1.5;
+}
+
+.head-beta {
+	color: #767676;
+	display: block;
+	font-size: .5em;
 }
 /*# sourceMappingURL=style.css.map */
