--- a/style.css
+++ b/style.css
@@ -47,29 +47,6 @@ figure img,
 	display: block;
 }
 
-article header time:before {
-	content: "";
-	display: inline-block;
-	height: 28px;
-	margin-right: 6px;
-	vertical-align: bottom;
-	width: 1em;
-}
-
-article header time:after {
-	content: none;
-}
-
-article header cite:before {
-	background: url(images/icons/people.svg) center/85% no-repeat;
-	content: "";
-	display: inline-block;
-	height: 28px;
-	margin-right: 6px;
-	vertical-align: bottom;
-	width: 1em;
-}
-
 .social-share-bar,
 .social-share-bar ul,
 .social-share-bar li,
@@ -234,16 +211,6 @@ figure.alignnone {
 	border: none;
 }
 
-.hentry .content-item-title a:after {
-	background: url(images/icons/link.svg) .1em/70% no-repeat;
-	content: "";
-	display: inline-block;
-	height: 1em;
-	margin: 0 0 -.05em .1em;
-	vertical-align: bottom;
-	width: 1em;
-}
-
 /* --- home page --- */
 .home .main-header {
 	display: none;
@@ -368,16 +335,6 @@ figcaption {
 	border-bottom: 1px solid #da1e00;
 }
 
-.primary-categories a:after {
-	background: url(images/icons/link.svg) center/90% no-repeat;
-	content: "";
-	display: inline-block;
-	height: 19px;
-	margin-left: 4px;
-	vertical-align: bottom;
-	width: 1em;
-}
-
 .article-header hgroup.source {
 	color: #191919;
 	font-size: 14px;
@@ -394,26 +351,6 @@ figcaption {
 
 .social-share-bar a {
 	border-bottom: none;
-}
-
-.social-share-bar .linkedin svg {
-	fill: #007bb6;
-}
-
-.social-share-bar .twitter svg {
-	fill: #00aced;
-}
-
-.social-share-bar .facebook svg {
-	fill: #3b5998;
-}
-
-.social-share-bar a:hover svg {
-	fill: #da1e00;
-}
-
-svg path {
-	fill: inherit;
 }
 
 .article-footer dl {
@@ -446,5 +383,70 @@ svg path {
 	color: #767676;
 	display: block;
 	font-size: .5em;
+}
+
+.primary-categories a:after,
+.hentry .content-item-title a:after {
+	background: url(images/icons/link.svg) no-repeat;
+	content: "";
+	display: inline-block;
+	height: 1em;
+	vertical-align: bottom;
+	width: 1em;
+}
+
+.primary-categories a:after {
+	background-position: center;
+	background-size: 90%;
+	margin: 0 0 2px 4px;
+}
+
+.hentry .content-item-title a:after {
+	background-position: .1em;
+	background-size: 70%;
+	margin: 0 0 -.05em .1em;
+}
+
+article header time:before,
+article header cite:before {
+	background: center/85% no-repeat;
+	content: "";
+	display: inline-block;
+	height: 28px;
+	margin-right: 6px;
+	vertical-align: bottom;
+	width: 1em;
+}
+
+article header time:before {
+	background-image: url(images/icons/date.svg);
+}
+
+article header time:after {
+	content: none;
+}
+
+article header cite:before {
+	background-image: url(images/icons/people.svg);
+}
+
+.social-share-bar .linkedin svg {
+	fill: #007bb6;
+}
+
+.social-share-bar .twitter svg {
+	fill: #00aced;
+}
+
+.social-share-bar .facebook svg {
+	fill: #3b5998;
+}
+
+.social-share-bar a:hover svg {
+	fill: #da1e00;
+}
+
+svg path {
+	fill: inherit;
 }
 /*# sourceMappingURL=style.css.map */
