--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -59,7 +59,7 @@ figcaption {
 	font-weight: 400;
 	letter-spacing: .02em;
 	line-height: normal;
-	padding: .75rem 1rem;
+	padding: .75rem 1rem .75rem 1.4rem;
 }
 
 .primary-categories ul {
