--- a/style.css
+++ b/style.css
@@ -316,7 +316,7 @@ figcaption {
 	font-weight: 400;
 	letter-spacing: .02em;
 	line-height: normal;
-	padding: .75rem 1rem;
+	padding: .75rem 1rem .75rem 1.4rem;
 }
 
 .primary-categories ul {
@@ -448,5 +448,9 @@ article header cite:before {
 
 svg path {
 	fill: inherit;
+}
+
+figcaption {
+	background: url(images/icons/photo.svg) 2px 12px / 14px no-repeat;
 }
 /*# sourceMappingURL=style.css.map */
