Overlay hovered linked images with the full size image icon
A great commit message...

--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -135,6 +135,12 @@ figure.alignnone {
 	display: none;
 }
 
+.hentry figure > a {
+	border-bottom: none;
+	display: block;
+	position: relative;
+}
+
 /* --- Content syndicate cards --- */
 
 /* CSS Grid fallback */
