--- a/css/03-iconography.css
+++ b/css/03-iconography.css
@@ -63,6 +63,17 @@ svg path {
 	fill: inherit;
 }
 
+.single-post figure a:hover:after {
+	background: url(images/icons/image-full-size.svg) no-repeat;
+	content: "";
+	display: block;
+	height: 20px;
+	position: absolute;
+	right: 13px;
+	top: 13px;
+	width: 20px;
+}
+
 figcaption {
 	background: url(images/icons/photo.svg) 2px 12px / 14px no-repeat;
 }
