--- a/style.css
+++ b/style.css
@@ -145,6 +145,12 @@ figure.alignnone {
 	display: none;
 }
 
+.hentry figure > a {
+	border-bottom: none;
+	display: block;
+	position: relative;
+}
+
 /* --- Content syndicate cards --- */
 
 /* CSS Grid fallback */
@@ -448,6 +454,17 @@ article header cite:before {
 
 svg path {
 	fill: inherit;
+}
+
+.single-post figure a:hover:after {
+	background: url(images/icons/image-full-size.svg) no-repeat;
+	content: "";
+	display: block;
+	height: 20px;
+	position: absolute;
+	right: 13px;
+	top: 13px;
+	width: 20px;
 }
 
 figcaption {
