--- a/css/03-iconography.css
+++ b/css/03-iconography.css
@@ -21,17 +21,18 @@
 }
 
 article header time:before,
-article header cite:before {
-	background: center/85% no-repeat;
+article header cite:before,
+.content-item-byline-date:before {
+	background: center/100% no-repeat;
 	content: "";
 	display: inline-block;
-	height: 28px;
-	margin-right: 6px;
-	vertical-align: bottom;
-	width: 1em;
+	height: 12px;
+	margin: 0 6px -1px 0;
+	width: 12px;
 }
 
-article header time:before {
+article header time:before,
+.content-item-byline-date:before {
 	background-image: url(images/icons/date.svg);
 }
 
