--- a/style.css
+++ b/style.css
@@ -199,6 +199,57 @@ figure.alignnone {
 	margin-bottom: .5rem;
 }
 
+/* Home top featured item */
+.news-features .content-syndicate-wrapper,
+.news-features .content-syndicate-item {
+	display: block;
+}
+
+.news-features .content-item-image {
+	float: right;
+	padding-left: 1rem;
+	width: 50%;
+}
+
+.news-features .content-item-image img {
+	width: 100%;
+}
+
+.news-features .content-item-title,
+.news-features .content-item-categories,
+.news-features .content-item-byline,
+.news-features .content-item-excerpt {
+	display: block;
+	padding-right: 1rem;
+	width: 50%;
+}
+
+.news-features .content-item-excerpt {
+	font-size: 18px;
+}
+
+.news-features .content-item-title {
+	line-height: 1.05;
+}
+
+.hentry .news-features .content-item-title a:after {
+	background-size: 45%;
+}
+
+@media screen and (max-width: 600px) {
+
+	.news-features .content-item-title,
+	.news-features .content-item-categories,
+	.news-features .content-item-byline,
+	.news-features .content-item-excerpt,
+	.news-features .content-item-image {
+		padding-right: 0;
+		padding-left: 0;
+		width: 100%;
+		float: none;
+	}
+}
+
 /* --- home page --- */
 .home .main-header {
 	display: none;
@@ -279,7 +330,8 @@ h1 {
 	font-size: 72px;
 }
 
-h2 {
+h2,
+.news-features .content-item-title {
 	font-size: 40px;
 }
 
