--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -243,6 +243,20 @@ figure.alignnone {
 	padding-top: 5rem;
 }
 
+/* Bottom section divider */
+main .bottom-divider {
+	padding-bottom: 0;
+}
+
+#binder main .bottom-divider:after {
+	border-bottom: 20px solid #f2f2f2;
+	content: "";
+	height: 20px;
+	margin-left: 2rem;
+	padding-top: 2rem;
+	visibility: visible;
+	width: calc(100% - 2rem);
+}
 
 @media screen and (min-width: 990px) and (max-width: 1386px) {
 
