Change HP story list layout from `grid` to `columns`

--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ main section {
 	margin-bottom: 4rem;
 }
 
+.single .main-header {
+	display: none;
+}
+
 article header time,
 article header cite,
 figure img,
@@ -164,27 +168,23 @@ figure.alignnone {
 
 /* CSS Grid */
 .content-syndicate-wrapper {
-	display: grid;
-	grid-gap: 2rem;
-	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+	-webkit-columns: 225px 4;
+	        columns: 225px 4;
+	-webkit-column-gap: 2rem;
+	        column-gap: 2rem;
 }
 
 /* - allow aligning elements within an item - */
 .content-syndicate-item {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-	-ms-flex-line-pack: start;
-	    align-content: flex-start;
-	transition: background-color .3s ease;
+	border-bottom: .25rem solid rgba(0, 0, 0, .05);
+	-webkit-column-span: none;
+	        column-span: none;
+	margin-bottom: 1rem;
+	padding-bottom: .25rem;
 }
 
 .content-item-image {
-	margin-bottom: 1rem;
+	margin: .35rem 0 1rem;
 }
 
 .content-item-byline-date {
@@ -203,6 +203,11 @@ figure.alignnone {
 .news-features .content-syndicate-wrapper,
 .news-features .content-syndicate-item {
 	display: block;
+}
+
+.news-features .content-syndicate-wrapper {
+	-webkit-columns: auto;
+	        columns: auto;
 }
 
 .news-features .content-item-image {
