--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -33,6 +33,10 @@ main section {
 	margin-bottom: 4rem;
 }
 
+.single .main-header {
+	display: none;
+}
+
 article header time,
 article header cite,
 figure img,
@@ -154,21 +158,20 @@ figure.alignnone {
 
 /* CSS Grid */
 .content-syndicate-wrapper {
-	display: grid;
-	grid-gap: 2rem;
-	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+	columns: 225px 4;
+	column-gap: 2rem;
 }
 
 /* - allow aligning elements within an item - */
 .content-syndicate-item {
-	display: flex;
-	flex-direction: column;
-	align-content: flex-start;
-	transition: background-color .3s ease;
+	border-bottom: .25rem solid rgba(0, 0, 0, .05);
+	column-span: none;
+	margin-bottom: 1rem;
+	padding-bottom: .25rem;
 }
 
 .content-item-image {
-	margin-bottom: 1rem;
+	margin: .35rem 0 1rem;
 }
 
 .content-item-byline-date {
@@ -187,6 +190,10 @@ figure.alignnone {
 .news-features .content-syndicate-wrapper,
 .news-features .content-syndicate-item {
 	display: block;
+}
+
+.news-features .content-syndicate-wrapper {
+	columns: auto;
 }
 
 .news-features .content-item-image {
