--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -48,6 +48,17 @@ h6 {
 	font-size: 18px;
 }
 
+@media screen and (max-width: 700px) {
+
+	h1 {
+		font-size: 3rem;
+	}
+
+	h2 {
+		font-size: 2rem;
+	}
+}
+
 .sub-call {
 	font-size: inherit;
 	margin-top: .5rem;
@@ -117,6 +128,11 @@ figcaption {
 
 .hentry .content-item-title a {
 	border: none;
+	transition: color .3s ease;
+}
+
+.hentry .content-item-title a:hover {
+	color: #ca1237;
 }
 
 .content-item-byline-date,
