--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -118,11 +118,72 @@ figcaption {
 	border-bottom: none;
 }
 
+main a.button,
+main a.button:focus,
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+	background: none;
+	border: 1px solid;
+	border-radius: 4px;
+	color: #ca1237;
+	margin-top: 1.5rem;
+	padding: .75rem 1.5rem;
+	text-transform: uppercase;
+	transition: all .3s ease;
+}
+
+main a.button:hover,
+button:hover,
+input[type="button"]:hover,
+input[type="reset"]:hover,
+input[type="submit"]:hover {
+	background: #ca1237;
+	border: 1px solid #ca1237;
+	color: #fff;
+}
+
+input[type="email"],
+input[type="password"],
+input[type="text"],
+select,
+textarea {
+	border: 1px solid #ccc;
+	padding: 6px 4px;
+	outline: 0;
+	border-radius: 2px;
+	color: #767676;
+	margin: 0;
+	min-height: 40px;
+	background: #fff;
+	appearance: none;
+	box-shadow: none;
+	text-indent: 10px;
+}
+
+/* - MailChimp embed - */
+#mc_embed_signup_scroll label {
+	display: block;
+	margin-bottom: 1rem;
+}
+
+input#mce-EMAIL {
+	display: inline-block;
+	min-width: 250px;
+}
+
+#mc_embed_signup_scroll input[type="submit"] {
+	margin-top: 0;
+}
+
 /* --- Content syndicate cards --- */
 .hentry .content-item-categories {
 	color: #da1e00;
+	display: block;
 	font-size: .9rem;
 	font-weight: 400;
+	line-height: 1.25;
 	text-transform: uppercase;
 }
 
