Give the "Subscribe" button the same height as the input field

--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -175,6 +175,7 @@ input#mce-EMAIL {
 
 #mc_embed_signup_scroll input[type="submit"] {
 	margin-top: 0;
+	height: 40px;
 }
 
 /* --- Content syndicate cards --- */
