--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -165,6 +165,7 @@ textarea {
 /* - MailChimp embed - */
 #mc_embed_signup_scroll label {
 	display: block;
+	font-size: 1.25rem;
 	margin-bottom: 1rem;
 }
 
