--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ figure.alignnone {
 }
 
 /* CSS Grid */
-.top-four .content-syndicate-wrapper {
+.content-syndicate-wrapper {
 	display: grid;
 	-webkit-columns: auto;
 	        columns: auto;
@@ -180,21 +180,16 @@ figure.alignnone {
 	grid-gap: 2rem;
 }
 
-/* Pintrist style */
-.content-syndicate-wrapper {
-	-webkit-columns: 225px 4;
-	        columns: 225px 4;
-	-webkit-column-gap: 2rem;
-	        column-gap: 2rem;
-}
-
 /* - allow aligning elements within an item - */
 .content-syndicate-item {
-	border-bottom: .25rem solid rgba(0, 0, 0, .05);
 	-webkit-column-span: none;
 	        column-span: none;
 	margin-bottom: 1rem;
 	padding-bottom: .25rem;
+}
+
+.content-syndicate-item:nth-child(-n+4) {
+	border-bottom: .25rem solid rgba(0, 0, 0, .05);
 }
 
 .content-item-image {
