Small style adjustments

--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -176,10 +176,6 @@ figure.alignnone {
 	padding-bottom: .25rem;
 }
 
-.content-syndicate-item:nth-child(-n+4) {
-	border-bottom: .25rem solid rgba(0, 0, 0, .05);
-}
-
 .content-item-image {
 	margin: .35rem 0 1rem;
 }
@@ -190,6 +186,10 @@ figure.alignnone {
 
 .content-item-categories {
 	margin-bottom: 1rem;
+}
+
+.cat-sec .content-item-categories {
+	display: none;
 }
 
 .content-item-title {
