--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -7,6 +7,11 @@ main {
 	border-bottom: 1px solid #da1e00;
 	color: #191919;
 	font-weight: 400;
+	transition: color .3s ease;
+}
+
+.hentry a:hover {
+	color: #da1e00;
 }
 
 h1,
@@ -32,6 +37,10 @@ h1 {
 h2,
 .news-features .content-item-title {
 	font-size: 40px;
+}
+
+header h2 {
+	margin-bottom: 2rem;
 }
 
 h3,
