--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -129,7 +129,7 @@ figcaption {
 
 main a.button,
 main a.button:focus,
-button,
+main button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
