--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -3,14 +3,14 @@ main {
 	font: 300 18px/28px "Source Sans Pro", sans-serif;
 }
 
-.hentry a {
+main a {
 	border-bottom: 1px solid #da1e00;
 	color: #191919;
 	font-weight: 400;
 	transition: color .3s ease;
 }
 
-.hentry a:hover {
+main a:hover {
 	color: #da1e00;
 }
 
@@ -20,8 +20,8 @@ h3,
 h4,
 h5,
 h6,
-.content-item-title,
-.content-item-title a {
+.card-title,
+.card-title a {
 	font-weight: 900;
 }
 
@@ -35,7 +35,7 @@ h1 {
 }
 
 h2,
-.news-features .content-item-title {
+.deck--featured .card:first-child .card-title {
 	font-size: 40px;
 }
 
@@ -44,7 +44,7 @@ header h2 {
 }
 
 h3,
-.content-item-title {
+.card-title {
 	font-size: 25px;
 }
 
@@ -184,12 +184,12 @@ input#mce-EMAIL {
 }
 
 #mc_embed_signup_scroll input[type="submit"] {
-	margin-top: 0;
+	margin: 0 0 0 10px;
 	height: 40px;
 }
 
 /* --- Content syndicate cards --- */
-.hentry .content-item-categories {
+main .card-categories {
 	color: #da1e00;
 	display: block;
 	font-size: .9rem;
@@ -198,23 +198,23 @@ input#mce-EMAIL {
 	text-transform: uppercase;
 }
 
-.hentry .content-item-title a {
+main .card-title a {
 	border: none;
 	transition: color .3s ease;
 }
 
-.hentry .content-item-title a:hover {
+main .card-title a:hover {
 	color: #ca1237;
 }
 
-.content-item-byline-date,
-.content-item-excerpt {
+.card-byline-date,
+.card-excerpt {
 	display: block;
 	font-size: .9rem;
 	line-height: 1.5;
 }
 
-.content-item-excerpt {
+.card-excerpt {
 	font-weight: 400;
 }
 
