Card markup and style adjustments

--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -208,7 +208,7 @@ main .card-title a:hover {
 	border-color: currentColor;
 }
 
-.card-byline-date,
+.card-date,
 .card-excerpt {
 	display: block;
 	font-size: .9rem;
@@ -216,6 +216,7 @@ main .card-title a:hover {
 }
 
 .card-excerpt {
+	font-size: 1rem;
 	font-weight: 400;
 }
 
