--- a/style.css
+++ b/style.css
@@ -599,6 +599,34 @@ input#mce-EMAIL {
 	height: 40px;
 }
 
+@media screen and (min-width: 990px) and (max-width: 1126px) {
+
+	#mc_embed_signup_scroll input[type="submit"] {
+		margin: 5px 0 0;
+		width: 250px;
+	}
+}
+
+@media screen and (min-width: 694px) and (max-width: 910px) {
+
+	#mc_embed_signup_scroll input[type="submit"] {
+		margin: 5px 0 0;
+		width: 250px;
+	}
+}
+
+@media screen and (max-width: 480px) {
+
+	input#mce-EMAIL {
+		width: 100%;
+	}
+
+	#mc_embed_signup_scroll input[type="submit"] {
+		margin: 5px 0 0;
+		width: 100%;
+	}
+}
+
 /* --- Content syndicate cards --- */
 main .card-categories {
 	color: #da1e00;
