--- a/style.css
+++ b/style.css
@@ -15,15 +15,22 @@ html {
 .site-header {
 	background-color: #fff;
 	box-sizing: border-box;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: end;
+	    -ms-flex-pack: end;
+	        justify-content: flex-end;
 	margin-left: 198px;
 	padding: 2rem;
 }
 
 .site-title {
-	background-image: url(images/wsu-insider-beta.svg);
-	background-position: right;
+	background-image: url(images/wsu-insider-mark.svg);
 	background-repeat: no-repeat;
+	display: block;
 	height: 2rem;
+	width: 320px;
 	position: relative;
 	text-indent: -9999px;
 }
