--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -176,6 +176,61 @@ main textarea {
 	text-indent: 10px;
 }
 
+/* --- Good to know --- */
+.deck--numbered-list {
+	counter-reset: sheet-count;
+}
+
+.deck--numbered-list .deck-header {
+	color: #be000f;
+	font-size: 2.35rem;
+	font-style: italic;
+	font-weight: 900;
+}
+
+.deck--numbered-list .card-title,
+.deck--numbered-list .card-title a {
+	font-size: 1.25rem;
+	font-weight: 400;
+}
+
+.deck--numbered-list article {
+	padding-left: 3.5rem;
+	margin-bottom: 2rem;
+}
+
+.deck--numbered-list .card-title a:before {
+	counter-increment: sheet-count;
+	content: counter(sheet-count);
+	position: absolute;
+	left: 2.5rem;
+	height: 2.5rem;
+	width: 2.5rem;
+	background: #820c23;
+	border-radius: 2rem;
+	text-align: center;
+	color: #fff;
+	font-weight: 900;
+	font-size: 1.5rem;
+	padding-top: .3rem;
+}
+
+.deck--numbered-list article:nth-child(3) .card-title a:before {
+	background: #a60f2d;
+}
+
+.deck--numbered-list article:nth-child(4) .card-title a:before {
+	background: #be000f;
+}
+
+.deck--numbered-list article:nth-child(5) .card-title a:before {
+	background: #da1e00;
+}
+
+.deck--numbered-list article:nth-child(6) .card-title a:before {
+	background: #f95735;
+}
+
 /* - MailChimp embed - */
 #mc_embed_signup_scroll label {
 	display: block;
