--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -2,6 +2,11 @@ html {
 	background-color: #f2f2f2;
 }
 
+/* - home main mark - */
+#wsu-insider-coug-head-mark {
+	margin-top: -1rem;
+}
+
 .site-header {
 	background-color: #fff;
 	box-sizing: border-box;
@@ -15,8 +20,8 @@ html {
 	background-image: url(images/wsu-insider-mark.svg);
 	background-repeat: no-repeat;
 	display: block;
-	height: 2rem;
-	width: 320px;
+	height: 3.5rem;
+	width: 300px;
 	position: relative;
 	text-indent: -9999px;
 }
@@ -292,10 +297,10 @@ main .deck--featured .card .card-title a:after {
 	left: 0;
 }
 
-/* --- deck header --- */
+/* --- deck with a header --- */
 .deck-header {
 	grid-column-start: 1;
-	grid-column-end: last;
+	grid-column-end: -1;
 	margin: 3rem 0 1.5rem;
 }
 
@@ -308,6 +313,22 @@ main .deck--featured .card .card-title a:after {
 
 .deck--numbered-list .deck-header {
 	margin: 0 0 3rem;
+}
+
+@media screen and (max-width: 693px) {
+
+	.deck.deck--numbered-list {
+		border: none;
+		padding: 0;
+	}
+
+	main .deck--numbered-list .card-title a:before {
+		left: 2rem;
+	}
+
+	.bg-mobile-gray {
+		background: #f2f2f2;
+	}
 }
 
 /* --- home page --- */
