--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -49,7 +49,7 @@ article h2 {
 
 h3,
 .card-title {
-	font-size: 25px;
+	font-size: 1.2em;
 }
 
 h4 {
@@ -70,6 +70,11 @@ h6 {
 	h2 {
 		font-size: 2rem;
 	}
+}
+
+.insider-description {
+	color: #777;
+	font-size: .8em;
 }
 
 .sub-call {
