--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ html {
 	background-color: #f2f2f2;
 }
 
+/* - home main mark - */
+#wsu-insider-coug-head-mark {
+	margin-top: -1rem;
+}
+
 .site-header {
 	background-color: #fff;
 	box-sizing: border-box;
@@ -29,8 +34,8 @@ html {
 	background-image: url(images/wsu-insider-mark.svg);
 	background-repeat: no-repeat;
 	display: block;
-	height: 2rem;
-	width: 320px;
+	height: 3.5rem;
+	width: 300px;
 	position: relative;
 	text-indent: -9999px;
 }
@@ -308,10 +313,10 @@ main .deck--featured .card .card-title a:after {
 	left: 0;
 }
 
-/* --- deck header --- */
+/* --- deck with a header --- */
 .deck-header {
 	grid-column-start: 1;
-	grid-column-end: last;
+	grid-column-end: -1;
 	margin: 3rem 0 1.5rem;
 }
 
@@ -324,6 +329,22 @@ main .deck--featured .card .card-title a:after {
 
 .deck--numbered-list .deck-header {
 	margin: 0 0 3rem;
+}
+
+@media screen and (max-width: 693px) {
+
+	.deck.deck--numbered-list {
+		border: none;
+		padding: 0;
+	}
+
+	main .deck--numbered-list .card-title a:before {
+		left: 2rem;
+	}
+
+	.bg-mobile-gray {
+		background: #f2f2f2;
+	}
 }
 
 /* --- home page --- */
@@ -482,7 +503,7 @@ article h2 {
 
 h3,
 .card-title {
-	font-size: 25px;
+	font-size: 1.2em;
 }
 
 h4 {
@@ -503,6 +524,11 @@ h6 {
 	h2 {
 		font-size: 2rem;
 	}
+}
+
+.insider-description {
+	color: #777;
+	font-size: .8em;
 }
 
 .sub-call {
