Make it possible to remove and add sections

--- a/includes/css/page-curation-customizer.css
+++ b/includes/css/page-curation-customizer.css
@@ -3,6 +3,10 @@
 	margin-top: 15px;
 }
 
+.featured-post-empty {
+	display: none;
+}
+
 .featured-post-single {
 	display: flex;
 	position: relative;
