--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -253,6 +253,22 @@ main .deck--featured .card .card-title a:after {
 	background-size: 45%;
 }
 
+/* --- multi deck --- */
+#binder .row.news-features .column.multi-deck {
+	display: grid;
+	grid-gap: 2rem;
+	grid-template-areas: "feature cheat" "news cheat";
+	grid-template-columns: 66% 34%;
+}
+
+.card--features {
+	grid-area: feature;
+}
+
+.deck.deck--wsu-news {
+	grid-area: news;
+}
+
 @media screen and (max-width: 700px) {
 
 	.deck--featured .card:first-child .card-title,
@@ -305,29 +321,36 @@ main .deck--featured .card .card-title a:after {
 }
 
 /* --- deck--numbered-list --- */
-.deck.deck--numbered-list {
+.deck--numbered-list {
 	display: block;
 	border-left: 1px solid rgba(0, 0, 0, .1);
-	padding-left: 1.5rem;
+	grid-area: cheat;
+	padding: 0 2rem 0 1.5rem;
 }
 
 .deck--numbered-list .deck-header {
 	margin: 0 0 3rem;
 }
 
+.deck--numbered-list .card--news {
+	position: relative;
+}
+
 @media screen and (max-width: 693px) {
 
+	#binder .row.news-features .column.multi-deck {
+		display: block;
+	}
+
 	.deck.deck--numbered-list {
-		border: none;
-		padding: 0;
-	}
-
-	main .deck--numbered-list .card-title a:before {
-		left: 2rem;
-	}
-
-	.bg-mobile-gray {
 		background: #f2f2f2;
+		border: none;
+		margin: 0 -2rem;
+		padding: 2rem;
+	}
+
+	.news-features .deck-features article:nth-child(3) {
+		display: none;
 	}
 }
 
