--- a/css/02-typography.css
+++ b/css/02-typography.css
@@ -31,12 +31,18 @@ h5 {
 }
 
 h1 {
-	font-size: 72px;
+	font-size: 2.8rem;
+	line-height: 1.1;
+}
+
+.category h1 {
+	font-size: 4.5rem;
 }
 
 h2,
 .deck--featured .card:first-child .card-title {
-	font-size: 40px;
+	font-size: 2rem;
+	line-height: 1.1;
 }
 
 header h2 {
@@ -64,12 +70,12 @@ h6 {
 @media screen and (max-width: 700px) {
 
 	h1 {
-		font-size: 3rem;
+		font-size: 2.25rem;
 	}
 
 	h2,
 	.deck--featured .card:first-child .card-title {
-		font-size: 2rem;
+		font-size: 1.8rem;
 	}
 
 	h3,
@@ -194,7 +200,7 @@ main textarea {
 
 .deck--numbered-list .deck-header {
 	color: #be000f;
-	font-size: 2.35rem;
+	font-size: 2rem;
 	font-style: italic;
 	font-weight: 900;
 }
@@ -333,6 +339,7 @@ main .card-title a:hover {
 
 .top-head p {
 	line-height: 1.5;
+	margin-left: .25rem;
 }
 
 .head-beta {
