Add layout styles for pagination on announcement date archives

--- a/css/01-layout.css
+++ b/css/01-layout.css
@@ -365,6 +365,24 @@ main .deck--featured .card .card-title a:after {
 	position: relative;
 }
 
+.pagination {
+	max-width: 584px;
+	display: flex;
+}
+
+.pagination-next,
+.pagination-previous {
+	width: 50%;
+}
+
+.pagination-previous {
+	text-align: left;
+}
+
+.pagination-next {
+	text-align: right;
+}
+
 @media screen and (max-width: 693px) {
 
 	#binder .row.news-features .column.multi-deck {
@@ -430,6 +448,7 @@ main .bottom-divider {
 
 @media screen and (max-width: 693px) {
 
+	.pagination,
 	.single-post .article-container article {
 		width: 100%;
 	}
